srcs/tester/base/map/operator[]/log.txt
./base/map/operator[]/patched.cpp:8:3: error: use of undeclared identifier 'ft'
  ft::map<char,std::string> mymap;
  ^
./base/map/operator[]/patched.cpp:10:3: error: use of undeclared identifier 'mymap'
  mymap['a']="an element";
  ^
./base/map/operator[]/patched.cpp:11:3: error: use of undeclared identifier 'mymap'
  mymap['b']="another element";
  ^
./base/map/operator[]/patched.cpp:12:3: error: use of undeclared identifier 'mymap'
  mymap['c']=mymap['b'];
  ^
./base/map/operator[]/patched.cpp:12:14: error: use of undeclared identifier 'mymap'
  mymap['c']=mymap['b'];
             ^
./base/map/operator[]/patched.cpp:14:36: error: use of undeclared identifier 'mymap'
  std::cout << "mymap['a'] is " << mymap['a'] << '\n';
                                   ^
./base/map/operator[]/patched.cpp:15:36: error: use of undeclared identifier 'mymap'
  std::cout << "mymap['b'] is " << mymap['b'] << '\n';
                                   ^
./base/map/operator[]/patched.cpp:16:36: error: use of undeclared identifier 'mymap'
  std::cout << "mymap['c'] is " << mymap['c'] << '\n';
                                   ^
./base/map/operator[]/patched.cpp:17:36: error: use of undeclared identifier 'mymap'
  std::cout << "mymap['d'] is " << mymap['d'] << '\n';
                                   ^
./base/map/operator[]/patched.cpp:19:41: error: use of undeclared identifier 'mymap'
  std::cout << "mymap now contains " << mymap.size() << " elements.\n";
                                        ^
10 errors generated.
